--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next-auth": "^3.27.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-devtools": "^3.7.0"
