--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "latest",
     "next-auth": "^3.27.3",
     "react": "^17.0.2",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
