--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
-    "redux-devtools": "^3.7.0"
+    "redux-devtools": "^3.7.0",
+    "swr": "^0.5.6",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
