--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "bcryptjs": "^2.4.3",
+    "email-validator": "^2.0.4",
+    "firebase": "^8.9.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.0.0",
     "next": "latest",
@@ -15,6 +17,7 @@
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
