--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@reduxjs/toolkit": "^1.6.1",
     "bcryptjs": "^2.4.3",
     "email-validator": "^2.0.4",
+    "emoji-mart": "^3.0.1",
     "firebase": "^8.9.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongodb": "^4.0.0",
     "next": "latest",
     "next-auth": "^3.27.3",
