--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
     "email-validator": "^2.0.4",
     "emoji-mart": "^3.0.1",
     "firebase": "^8.9.0",
+    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
     "mongodb": "^4.0.0",
-    "multer": "^1.4.3",
     "next": "latest",
     "next-auth": "^3.27.3",
-    "next-connect": "^0.10.2",
     "react": "^17.0.2",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
